--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -36,7 +36,7 @@
 		"matches": ["https://www.tumbex.com/*"],
 		"js": ["content-scripts/common.js","content-scripts/tumblr.com-shared.js","content-scripts/tumbex.com.js"]
 	},{
-		"matches": ["https://twitter.com/*","https://mobile.twitter.com/*"],
+		"matches": ["https://twitter.com/*","https://mobile.twitter.com/*","https://x.com/*","https://mobile.x.com/*"],
 		"js": ["content-scripts/common.js","content-scripts/twitter.com.js"]
 	},{
 		"matches": ["https://xkcd.com/*"],
@@ -45,7 +45,9 @@
 	"permissions": [
 		"https://www.deviantart.com/*",
 		"https://twitter.com/*",
+		"https://x.com/",
 		"https://api.twitter.com/*",
+		"https://api.x.com/*",
 		"https://mobile.twitter.com/*",
 		"cookies",
 		"dns",
