[Debian packaging] Fixed OIIO package name

--- a/packaging/meson.build
+++ b/packaging/meson.build
@@ -84,7 +84,7 @@ if apt_prog.found() and dpkg_architecture_prog.found() and tar_prog.found() and 
 		'libjpeg'          : ['libjpeg-turbo8-dev'      ,'libjpeg-turbo8'], # TODO Don't assume libjpeg-turbo62, guess from libjpeg
 		'libpng'           : ['libpng-dev'              ,'libpng'],
 		'libtiff-4'        : ['libtiff5-dev'            ,'libtiff5'], # That is not an error: libtiff5 provide libtiff-4
-		'OpenImageIO'      : ['libopenimageio-dev'      ,'libopenimageio'],
+		'OpenImageIO'      : ['libopenimageio-dev'      ,'libopenimageio2.4'],
 		'sdl2'             : ['libsdl2-dev'             ,'libsdl2'],
 		'sqlite3'          : ['libsqlite3-dev'          ,'libsqlite3'],
 		'zlib'             : ['zlib1g-dev'              ,'zlib1g'],
